# oss

./: .gitignore  README.md  backend_test.py  focused_test.py  individual_security_test.py  package-lock.json  package.json  pagination_test.py  run_scanner.ts  scanner.ts  storage.ts  test_ddos.py  test_general.py  test_result.md  tools_test.py  tsconfig.json  vercel.json
.emergent/: emergent.yml
.github/workflows/: ci.yml
auth/: README.md  index.php
backend/: .env  SCANNER_OPTIMIZATION.md  advanced_scanner.py  complete_scanner.py  db_connection.py  mega_scanner.py  package-lock.json  package.json  patch_tests.py  requirements.txt  rocksdb_database.py  scanner.py  security_middleware.py  server.py  telegram_bot.py
backend/cpp/search-engine/: CMakeLists.txt
backend/cpp/search-engine/src/: entropy.cpp  entropy.hpp  main.cpp  searcher.cpp  searcher.hpp
backend/routes/: admin_routes.py  auth_routes.py  tools_routes.py
backend/rust/security-core/: Cargo.toml
backend/rust/security-core/src/: crypto.rs  integrity.rs  ip_checker.rs  jwt_validator.rs  main.rs  password_checker.rs  threat_scan.rs  validation.rs
backend/scanner/: scanner.ts  storage.ts
backend/tests/: test_security_scanner.py
docs/: PRD.md  SCANNER_OPTIMIZATION.md  SECURITY_DOCUMENTATION.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  config.js  index.css  index.js
infra/legacy_auth/: index.php
memory/: PRD.md
nginx/: README.md
nginx/conf/: nginx.conf
scripts/: count_lines.py
shared/: schema.ts
(+168 files in other folders)
