[package]
name = "security-core"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
thiserror = "1.0"
regex = "1.10"
once_cell = "1.19"
base64 = "0.21"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
